wisdom-frontend/deploy/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: wisdom-frontend
  namespace: apps
  labels:
    app: wisdom-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisdom-frontend-deployment
  template:
    metadata:
      name: wisdom-frontend-deployment
      labels:
        app: wisdom-frontend-deployment
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: wisdom-frontend-deployment
        image: mejlholm/wisdom-frontend:1.0-SNAPSHOT
        resources:
          limits:
            memory: "256Mi"
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 5
          successThreshold: 2
          timeoutSeconds: 5
