wisdom-frontend/deploy/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: wisdom-frontend
  namespace: apps
spec:
  selector:
    app: wisdon-frontend-deployment
  ports:
    - name: default
      port: 8080
      protocol: TCP
      targetPort: 8080
