wisdom-frontend/deploy/wisdom-frontend-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wisdom-frontend
  namespace: apps
spec:
  rules:
  - host: wisdom.debian-2gb-nbg1-1.mejlholm.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wisdom-frontend
          servicePort: 8080
